--- a/src/styles/top.scss
+++ b/src/styles/top.scss
@@ -11,6 +11,8 @@
 }
 
 .top-title {
+    padding-left: 30px;
+    box-sizing: border-box;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
