feat(cli): update new cli

--- a/src/styles/theme/black.scss
+++ b/src/styles/theme/black.scss
@@ -3,7 +3,8 @@
         background-color: #002253!important;
     }
     .avue-header,
-    .tags-container {
+    .tags-container,
+    .avue-logo {
         background-color: transparent;
     }
     .el-card {
@@ -25,7 +26,7 @@
     .avue-tabs {
         padding: 0 20px !important;
     }
-    .sidebar-container,
+    .avue-sidebar,
     .logo,
     .el-menu-item,
     .el-submenu__title,
@@ -36,7 +37,7 @@
         color: #ccc !important;
     }
     .logo_title,
-    .tags-breadcrumb,
+    .avue-breadcrumb,
     {
         color: #ff929a !important;
         i {
@@ -53,8 +54,9 @@
     .top {
         border-bottom: none;
     }
-    .tags-menu {
-        background: #002253 !important;
+    .avue-tags {
+        background-color: transparent;
+        border: none;
     }
     .tag-item {
         color: #ff929a !important;
@@ -116,6 +118,47 @@
             i {
                 color: #ffb870 !important;
             }
+            &:hover {
+                background: hsla(0, 0%, 100%, .05) !important;
+            }
+        }
+    }
+    .el-tabs--card>.el-tabs__header .el-tabs__item {
+        color: #ff929a;
+        border: 1px solid #ff929a;
+        &.is-active {
+            border: 1px solid #ffb870;
+            color: #ffb870;
+        }
+    }
+    .tags-container {
+        border-color: #ff929a;
+    }
+    .top-search {
+        input::-webkit-input-placeholder,
+        textarea::-webkit-input-placeholder {
+            /* WebKit browsers */
+            color: #ff929a;
+        }
+        input:-moz-placeholder,
+        textarea:-moz-placeholder {
+            /* Mozilla Firefox 4 to 18 */
+            color: #ff929a;
+        }
+        input::-moz-placeholder,
+        textarea::-moz-placeholder {
+            /* Mozilla Firefox 19+ */
+            color: #ff929a;
+        }
+        input:-ms-input-placeholder,
+        textarea:-ms-input-placeholder {
+            /* Internet Explorer 10+ */
+            color: #ff929a;
+        }
+    }
+    .top-bar__item {
+        i {
+            color: #ff929a;
         }
     }
 }
