--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -14,6 +14,8 @@
 @import './animate/vue-transition.scss';
 //主题
 @import './theme/index.scss';
+//适配
+@import './media.scss';
 .h1,
 .h2,
 .h3,
@@ -54,6 +56,10 @@ th,
 td {
     margin: 0;
     padding: 0;
+}
+
+* {
+    outline: none !important;
 }
 
 body {
