--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -31,3 +31,30 @@
 .el-menu--horizontal>.el-submenu .el-submenu__title:hover {
     background-color: transparent;
 }
+
+.el-message__icon,
+.el-message__content {
+    display: inline-block;
+}
+
+.el-date-editor .el-range-input,
+.el-date-editor .el-range-separator {
+    height: auto;
+    overflow: hidden;
+}
+
+.el-dialog__wrapper {
+    z-index: 2048;
+}
+
+.el-scrollbar__wrap {
+    overflow-x: hidden;
+}
+
+.el-col {
+    margin-bottom: 8px;
+}
+
+.el-main {
+    padding: 0 !important;
+}
