--- a/src/styles/tags.scss
+++ b/src/styles/tags.scss
@@ -1,35 +1,59 @@
-.tags-breadcrumb {
-    display: flex;
-    align-items: center;
-    padding: 0 16px;
-    height: 50px;
+.avue-breadcrumb {
+    &_collapse {
+        line-height: 55px;
+        font-size: 30px !important;
+        &--right {
+            transform: rotate(90deg);
+        }
+    }
 }
 
-.tags-breadcrumb-list {
-    padding: 0 15px;
-}
-
-.tag-collapse {
-    font-size: 36px !important;
-}
-
-.tag-collapse.tag-collapse_right {
-    transform: rotate(90deg);
-}
-
-.tags-container {
-    margin: 0 10px 10px 10px;
+.avue-tags {
     position: relative;
+    padding: 5px 10px;
+    margin-bottom: 10px;
     box-sizing: border-box;
     overflow: hidden;
-    border-radius: 5px;
+    border-top: 1px solid #f6f6f6;
     background-color: #fff;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .05);
+    .el-tabs--card>.el-tabs__header {
+        margin: 0;
+    }
+    .el-tabs--card>.el-tabs__header .el-tabs__nav,
+    .el-tabs--card>.el-tabs__header .el-tabs__item,
+    .el-tabs--card>.el-tabs__header {
+        border: none;
+    }
+    .el-tabs--card>.el-tabs__header .el-tabs__item:first-child {
+        border-left-width: 1px
+    }
+    .el-tabs--card>.el-tabs__header .el-tabs__item {
+        margin: 0 3px;
+        height: 30px;
+        line-height: 30px;
+        font-size: 13px;
+        font-weight: normal;
+        border: 1px solid #eee;
+        color: #ccc;
+        border-radius: 3px;
+        &.is-active {
+            border: 1px solid #409EFF;
+            color: #409EFF;
+        }
+    }
+    .el-tabs__nav-prev,
+    .el-tabs__nav-next {
+        width: 20px;
+        line-height: 34px;
+        font-size: 18x;
+        text-align: center;
+    }
     .tags-box {
         position: relative;
         box-sizing: border-box;
         padding-right: 106px;
         width: 100%;
-        height: 40px;
     }
     .tags-list {
         position: absolute;
@@ -38,74 +62,11 @@
         white-space: nowrap;
         transition: left .3s ease;
     }
-    .tag-item-icon {
-        color: #ccc;
-        font-size: 11px !important;
-    }
-    .tag-item {
-        position: relative;
-        display: inline-block;
-        height: 30px;
-        line-height: 30px;
-        margin: 2px 4px 2px 0;
-        padding: 0 10px;
-        border: 1px solid #ccc;
-        border-radius: 3px;
-        color: #ccc;
-        font-size: 12px;
-        vertical-align: middle;
-        opacity: 1;
-        overflow: hidden;
-        cursor: pointer;
-        &.is-active {
-            color: #495060;
-            border-color: $mainBg;
-            .tag-item-icon {
-                color: $mainBg;
-            }
-        }
-    }
-    .tag-text {
-        margin-left: 8px;
-    }
-    .tag-close {
-        margin-left: 8px;
-    }
-    .tag-item:hover {
-        opacity: .85;
-    }
     .tags-menu {
         position: absolute;
         top: 0;
         right: 0;
-        display: flex;
-        align-items: center;
-        padding: 0 15px;
-        height: 100%;
+        padding: 1px 15px;
         box-sizing: border-box;
-        background-color: #fff;
-        box-shadow: -3px 0 15px 3px rgba(0, 0, 0, 0.1);
-    }
-}
-
-.contextmenu {
-    margin: 0;
-    top: 64px;
-    list-style-type: none;
-    padding: 5px 0;
-    border-radius: 4px;
-    font-size: 12px;
-    font-weight: 400;
-    color: #333;
-    box-shadow: 2px 2px 3px 0 rgba(0, 0, 0, 0.3);
-    li {
-        margin: 0;
-        height: 32px;
-        line-height: 32px;
-        padding: 0 15px;
-        cursor: pointer;
-        &:hover {
-            background: #eee;
-        }
     }
 }
