--- a/src/styles/top.scss
+++ b/src/styles/top.scss
@@ -22,7 +22,7 @@
 
 .top-search {
     position: absolute !important;
-    top: 10px;
+    top: 5px;
     left: 20px;
     width: 400px !important;
     .el-input__inner {
@@ -49,11 +49,11 @@
 }
 
 .top-bar__left {
-    left: 0;
+    left: 15px;
 }
 
 .top-bar__right {
-    padding: 8px 10px;
+    padding: 5px 10px;
     right: 0;
 }
 
