--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -4,16 +4,17 @@
     height: 100%;
     position: relative;
     background-color: #20222a;
-    transition: width .6s;
+    transition: width .2s;
     box-sizing: border-box;
+    box-shadow: 2px 0 6px rgba(0,21,41,.35);
     &--tip{
-        width:92%;
+        width:90%;
         height: 140px;
         line-height: 140px;
         border-radius: 5px;
         position: absolute;
         top:0;
-        left:4%;
+        left:5%;
         color:#ccc;
         z-index: 2;
         text-align: center;
