--- a/src/styles/theme/index.scss
+++ b/src/styles/theme/index.scss
@@ -1,6 +1,5 @@
+// 白色主题
+@import './white.scss';
+
 // 炫酷主题
 @import './star.scss';
-//渐变主题
-@import './gradual.scss';
-//纯色
-@import './black.scss';
