--- a/src/styles/media.scss
+++ b/src/styles/media.scss
@@ -9,7 +9,7 @@
 .avue-contail {
     width: 100%;
     height: 100%;
-    background-color: #f2f2f2;
+    background: #f0f2f5;
     background-size: 100%;
     background-repeat: no-repeat;
 }
@@ -17,7 +17,7 @@
 .avue-top {
     position: relative;
     width: 100%;
-    height: 50px;
+    height: 64px;
     margin: 0 auto;
 }
 
@@ -25,7 +25,7 @@
     position: fixed;
     left: 0;
     top: 0;
-    width: 220px;
+    width: 240px;
     height: 100%;
     z-index: 1025;
 }
@@ -45,7 +45,7 @@
 }
 
 .avue-header {
-    padding-left: 220px;
+    padding-left: 240px;
     width: 100%;
     background-color: #fff;
     box-sizing: border-box;
@@ -53,12 +53,11 @@
 
 .avue-main {
     position: absolute;
-    left: 220px;
-    margin-top: 5px;
+    left: 240px;
     padding: 0;
     padding-bottom: 20px;
-    width: calc(100% - 220px);
-    height: calc(100% - 57px);
+    width: calc(100% - 240px);
+    height: calc(100% - 70px);
     box-sizing: border-box;
     overflow: hidden;
 }
