--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -1,6 +1,7 @@
 .avue-sidebar {
+    user-select: none; 
     position: relative;
-    padding-top: 60px;
+    padding-top: 84px;
     height: 100%;
     position: relative;
     background-color: #20222a;
@@ -10,10 +11,12 @@
     &--tip{
         width:90%;
         height: 140px;
-        line-height: 140px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         border-radius: 5px;
         position: absolute;
-        top:0;
+        top:5px;
         left:5%;
         color:#ccc;
         z-index: 2;
