--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -72,7 +72,7 @@
         height: 50px;
         line-height: 50px;
         &.is-active {
-            background-color: rgba(0, 0, 0, .8) !important;
+            background-color: rgba(0, 0, 0, .8);
             span,
             i {
                 color: #fff
