--- a/src/styles/theme/white.scss
+++ b/src/styles/theme/white.scss
@@ -45,7 +45,7 @@
         color:#666 !important;
       }
       &.is-active{
-        background-image: linear-gradient(90deg,#1861d5,#3080fe);
+        background-image: linear-gradient(90deg,#1861d5,#3080fe)  !important;
         span,i {
           color:#fff !important;
         }
@@ -73,7 +73,7 @@
       }
     }
     .el-menu-item.is-active,.el-submenu__title.is-active{
-      background-image: linear-gradient(90deg,#1861d5,#3080fe);
+      background-image: linear-gradient(90deg,#1861d5,#3080fe) !important;
       i,span{
         color:#fff !important;
       }
@@ -81,6 +81,7 @@
         display: none;
       }
       &:hover{
+        background-image: linear-gradient(90deg,#1861d5,#3080fe) !important;
         i,span{
           color:#fff !important;
         }
