--- a/src/styles/theme/white.scss
+++ b/src/styles/theme/white.scss
@@ -18,7 +18,7 @@
   .logo_title,
   .avue-breadcrumb,
   {
-      color: #fff !important;
+      color: #fff ;
       i {
           color: #fff;
       }
@@ -27,27 +27,27 @@
     .el-menu-item {
       i,
       span {
-          color: #fff !important;
+          color: #fff ;
       }
       &:hover {
           i,
           span {
-              color: #fff !important;
+              color: #fff ;
           }
       }
     }
   }
   .el-menu--popup{
-    background-color: #fff !important;
+    background-color: #fff ;
     .el-menu-item{
-      background-color: #fff !important;
+      background-color: #fff ;
       span,i {
-        color:#666 !important;
+        color:#666 ;
       }
       &.is-active{
-        background-color:#409EFF !important;
+        background-color:#409EFF ;
         span,i {
-          color:#fff !important;
+          color:#fff ;
         }
       }
     }
@@ -55,35 +55,35 @@
   .avue-sidebar{
     box-shadow: 2px 0 6px rgba(0, 21, 41, 0.15);
     .el-menu{
-      background-color: #fff !important;
+      background-color: #fff ;
     }
-    background-color:#fff !important;
+    background-color:#fff ;
     .el-menu-item,.el-submenu__title{
       i,span{
-        color:#666 !important;
+        color:#666 ;
       }
-      background-color:#fff !important;
+      background-color:#fff ;
     }
     .el-menu-item,.el-submenu__title{
       &:hover{
-        background-color: transparent !important;
+        background-color: transparent ;
         i,span{
-          color:#666 !important;
+          color:#666 ;
         }
       }
     }
     .el-menu-item.is-active,.el-submenu__title.is-active{
-      background-color:#409EFF !important;
+      background-color:#409EFF ;
       i,span{
-        color:#fff !important;
+        color:#fff ;
       }
       &::before{
         display: none;
       }
       &:hover{
-        background-color: #409EFF !important;
+        background-color: #409EFF ;
         i,span{
-          color:#fff !important;
+          color:#fff ;
         }
       }
     }
