--- a/src/styles/animate/vue-transition.scss
+++ b/src/styles/animate/vue-transition.scss
@@ -29,3 +29,37 @@
     opacity: 0;
     transform: scale(0.8);
 }
+
+@-webkit-keyframes animate-cloud {
+    from {
+      background-position: 600px 100%;
+    }
+    to {
+      background-position: 0 100%;
+    }
+  }
+  @-moz-keyframes animate-cloud {
+    from {
+      background-position: 600px 100%;
+    }
+    to {
+      background-position: 0 100%;
+    }
+  }
+  @-ms-keyframes animate-cloud {
+    from {
+      background-position: 600px 100%;
+    }
+    to {
+      background-position: 0 100%;
+    }
+  }
+  @-o-keyframes animate-cloud {
+    from {
+      background-position: 600px 100%;
+    }
+    to {
+      background-position: 0 100%;
+    }
+  }
+  
