--- a/src/styles/theme/star.scss
+++ b/src/styles/theme/star.scss
@@ -3,6 +3,9 @@
         background-image: url("/img/bg/star-squashed.jpg");
         background-size: 100% 100%;
     }
+    .avue-logo{
+        color: #fff;
+    }
     .avue-header,
     .avue-logo,
     .tags-container {
