--- a/src/styles/theme/white.scss
+++ b/src/styles/theme/white.scss
@@ -68,6 +68,7 @@
   .avue-sidebar{
     box-shadow: 2px 0 6px rgba(0, 21, 41, 0.15);
     background-color: #fff;
+    padding-top: 70px;
     .el-menu-item,.el-submenu__title{
       i,span{
           color:#666
