fix sidebar styles

--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -39,6 +39,9 @@
     transition: width .2s;
     box-sizing: border-box;
     box-shadow: 2px 0 6px rgba(0,21,41,.35);
+    .el-scrollbar__wrap {
+        overflow-x: hidden;
+    }
     &--tip{
         width:90%;
         height: 140px;
@@ -81,4 +84,5 @@
             }
         }
     }
+    
 }
