update theme styles

--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -59,6 +59,9 @@
         background-color: rgba(0,0,0,.4);
     }
     .el-menu-item,.el-submenu__title{
+        i{
+            margin-right: 10px;
+        }
         i,span{
             color:hsla(0,0%,100%,.7);
         }
