--- a/src/styles/theme/index.scss
+++ b/src/styles/theme/index.scss
@@ -1,11 +1,11 @@
-// 白色主题
+// white
 @import './white.scss';
 
-// 炫酷主题
+// star
 @import './star.scss';
 
 
-// d2主题
+// d2
 @import './d2.scss';
 
 //iview
@@ -13,4 +13,8 @@
 
 //heyui
 @import './hey.scss';
+
+
+//renren
+@import './renren.scss';
 
